fixed GameServiceTest.testNextPlayer